cmake_minimum_required(VERSION 3.2)

project(Boost)

find_package(MPI)

set(BUILD_TESTING	OFF)
set(BOOST_ROOT	${CMAKE_CURRENT_SOURCE_DIR}/boost)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/include")

include(CMakeDetermineASMCompiler)

if(WIN32)
ENABLE_LANGUAGE(ASM_MASM)
else()
ENABLE_LANGUAGE(ASM)
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${MPI_INCLUDE_PATH})

add_subdirectory(libs/accumulators)
add_subdirectory(libs/algorithm)
add_subdirectory(libs/align)
add_subdirectory(libs/any)
add_subdirectory(libs/array)
add_subdirectory(libs/asio)
add_subdirectory(libs/assert)
add_subdirectory(libs/assign)
add_subdirectory(libs/atomic)
add_subdirectory(libs/beast)
add_subdirectory(libs/bimap)
add_subdirectory(libs/bind)
add_subdirectory(libs/callable_traits)
add_subdirectory(libs/chrono)
add_subdirectory(libs/circular_buffer)
add_subdirectory(libs/compatibility)
add_subdirectory(libs/compute)
add_subdirectory(libs/concept_check)
add_subdirectory(libs/config)
add_subdirectory(libs/container)
add_subdirectory(libs/container_hash)
add_subdirectory(libs/context)
add_subdirectory(libs/contract)
add_subdirectory(libs/conversion)
add_subdirectory(libs/convert)
add_subdirectory(libs/core)
add_subdirectory(libs/coroutine)
add_subdirectory(libs/coroutine2)
add_subdirectory(libs/crc)
add_subdirectory(libs/date_time)
add_subdirectory(libs/describe)
add_subdirectory(libs/detail)
add_subdirectory(libs/dll)
add_subdirectory(libs/dynamic_bitset)
add_subdirectory(libs/endian)
add_subdirectory(libs/exception)
add_subdirectory(libs/fiber)
add_subdirectory(libs/filesystem)
add_subdirectory(libs/flyweight)
add_subdirectory(libs/foreach)
add_subdirectory(libs/format)
add_subdirectory(libs/function)
add_subdirectory(libs/function_types)
add_subdirectory(libs/functional)
add_subdirectory(libs/fusion)
add_subdirectory(libs/geometry)
add_subdirectory(libs/gil)
add_subdirectory(libs/graph)
add_subdirectory(libs/graph_parallel)
add_subdirectory(libs/hana)
add_subdirectory(libs/heap)
add_subdirectory(libs/histogram)
add_subdirectory(libs/hof)
add_subdirectory(libs/icl)
add_subdirectory(libs/integer)
add_subdirectory(libs/interprocess)
add_subdirectory(libs/intrusive)
add_subdirectory(libs/io)
add_subdirectory(libs/iostreams)
add_subdirectory(libs/iterator)
add_subdirectory(libs/json)
add_subdirectory(libs/lambda)
add_subdirectory(libs/lambda2)
add_subdirectory(libs/leaf)
add_subdirectory(libs/lexical_cast)
add_subdirectory(libs/local_function)
add_subdirectory(libs/locale)
add_subdirectory(libs/lockfree)
add_subdirectory(libs/log)
add_subdirectory(libs/logic)
add_subdirectory(libs/math)
add_subdirectory(libs/metaparse)
add_subdirectory(libs/move)
add_subdirectory(libs/mp11)
add_subdirectory(libs/mpi)
add_subdirectory(libs/mpl)
add_subdirectory(libs/msm)
add_subdirectory(libs/multi_array)
add_subdirectory(libs/multi_index)
add_subdirectory(libs/multiprecision)
add_subdirectory(libs/nowide)
add_subdirectory(libs/numeric/conversion)
add_subdirectory(libs/numeric/interval)
add_subdirectory(libs/optional)
add_subdirectory(libs/outcome)
add_subdirectory(libs/parameter)
add_subdirectory(libs/parameter_python)
add_subdirectory(libs/pfr)
add_subdirectory(libs/phoenix)
add_subdirectory(libs/poly_collection)
add_subdirectory(libs/polygon)
add_subdirectory(libs/pool)
add_subdirectory(libs/predef)
add_subdirectory(libs/preprocessor)
add_subdirectory(libs/process)
add_subdirectory(libs/program_options)
add_subdirectory(libs/property_map)
add_subdirectory(libs/property_map_parallel)
add_subdirectory(libs/property_tree)
add_subdirectory(libs/proto)
add_subdirectory(libs/ptr_container)
# add_subdirectory(libs/python)
add_subdirectory(libs/qvm)
add_subdirectory(libs/random)
add_subdirectory(libs/range)
add_subdirectory(libs/ratio)
add_subdirectory(libs/rational)
add_subdirectory(libs/regex)
add_subdirectory(libs/safe_numerics)
add_subdirectory(libs/scope_exit)
add_subdirectory(libs/serialization)
add_subdirectory(libs/signals2)
add_subdirectory(libs/smart_ptr)
add_subdirectory(libs/sort)
add_subdirectory(libs/spirit)
add_subdirectory(libs/stacktrace)
add_subdirectory(libs/statechart)
add_subdirectory(libs/static_assert)
add_subdirectory(libs/static_string)
add_subdirectory(libs/stl_interfaces)
add_subdirectory(libs/system)
add_subdirectory(libs/test)
add_subdirectory(libs/thread)
add_subdirectory(libs/throw_exception)
add_subdirectory(libs/timer)
add_subdirectory(libs/tokenizer)
add_subdirectory(libs/tti)
add_subdirectory(libs/tuple)
add_subdirectory(libs/type_erasure)
add_subdirectory(libs/type_index)
add_subdirectory(libs/type_traits)
add_subdirectory(libs/typeof)
add_subdirectory(libs/units)
add_subdirectory(libs/unordered)
add_subdirectory(libs/utility)
add_subdirectory(libs/uuid)
add_subdirectory(libs/variant)
add_subdirectory(libs/variant2)
add_subdirectory(libs/vmd)
add_subdirectory(libs/wave)
add_subdirectory(libs/winapi)
add_subdirectory(libs/xpressive)
add_subdirectory(libs/yap)